<resources>
    <string name="app_name">Catmonit app</string>

    <string name="title_home">Home</string>
    <string name="title_storage">Storage</string>
    <string name="title_networking">Networking</string>
    <string name="title_activity_login">Login</string>

    <string name="prompt_server">Server address</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome home, %s!"</string>
    <string name="invalid_server">Server address may not be empty</string>
    <string name="invalid_username">Username may not be empty</string>
    <string name="invalid_password">Password may not be empty</string>
    <string name="login_failed">"Login failed"</string>

    <string name="storage_space_used">%s / %s used</string>

    <string name="bandwidth_used">%s bandwidth used</string>

    <string name="label_errors">Errors</string>
    <string name="label_warnings">Warnings</string>
    <string name="icon">icon</string>
    <string name="error_icon">Error icon</string>
    <string name="warning_icon">Warning icon</string>
    <string name="next_guys">The data you see is all random. Implementing this is left as an exercise for the next guys.</string>
    <string name="networkThroughput">Network throughput (kB/s)</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="log_out">Log out</string>
    <string name="network_error">Network error</string>
    <string name="file_shares">File shares</string>
    <string name="system">System</string>
    <string name="uptime">%s uptime</string>
    <string name="cpu_usage_d">CPU usage: %.2f %%</string>
    <string name="ram_usage">RAM usage: %s / %s</string>
    <string name="swap_usage">Swap usage: %s / %s</string>
</resources>