<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/terminal_24px"
        android:title="@string/system" />

    <item
        android:id="@+id/navigation_storage"
        android:icon="@drawable/database_24px"
        android:title="@string/title_storage" />

    <item
        android:id="@+id/navigation_fileshares"
        android:icon="@drawable/folder_shared_24px"
        android:title="@string/file_shares" />

    <item
        android:id="@+id/navigation_networking"
        android:icon="@drawable/hub_24px"
        android:title="@string/title_networking" />

</menu>