<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="catmonit.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_storage"
        android:name="catmonit.app.ui.storage.StorageFragment"
        android:label="@string/title_storage"
        tools:layout="@layout/fragment_storage" />

    <fragment
        android:id="@+id/navigation_networking"
        android:name="catmonit.app.ui.networking.NetworkingFragment"
        android:label="@string/title_networking"
        tools:layout="@layout/fragment_networking" />
</navigation>